// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetadataTable should correctly render different types of metadata 1`] = `
<TableRow
  data-test="metadata-table-row"
>
  <TableColumn>
    <KeySelect
      defaultValue="tx_id"
      name="key"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      usedKeys={Array []}
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      id="metadata-alias-column"
      name="alias"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="test_alias"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="type"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        Array [
          Object {
            "label": "Text",
            "value": "Text",
          },
          Object {
            "label": "Text (Optional)",
            "value": "Text_Optional",
          },
          Object {
            "label": "Date",
            "value": "Date",
          },
          Object {
            "label": "Language",
            "value": "Language",
          },
          Object {
            "label": "Region",
            "value": "Region",
          },
        ]
      }
      value="Text"
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      id="metadata-value-column"
      name="textValue"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="text"
    />
  </TableColumn>
  <TableColumn>
    <FallbackSelect
      name="fallbackKey"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={Array []}
    />
  </TableColumn>
  <TableColumn>
    <DeleteRowButton
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </TableColumn>
</TableRow>
`;

exports[`MetadataTable should correctly render different types of metadata 2`] = `
<TableRow
  data-test="metadata-table-row"
>
  <TableColumn>
    <KeySelect
      defaultValue="iat"
      name="key"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      usedKeys={Array []}
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      id="metadata-alias-column"
      name="alias"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="date_alias"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="type"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        Array [
          Object {
            "label": "Text",
            "value": "Text",
          },
          Object {
            "label": "Text (Optional)",
            "value": "Text_Optional",
          },
          Object {
            "label": "Date",
            "value": "Date",
          },
          Object {
            "label": "Language",
            "value": "Language",
          },
          Object {
            "label": "Region",
            "value": "Region",
          },
        ]
      }
      value="Date"
    />
  </TableColumn>
  <TableColumn>
    <TableInputDate
      name="dateValue"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      type="date"
      value="2018-09-17"
    />
  </TableColumn>
  <TableColumn>
    <FallbackSelect
      name="fallbackKey"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={Array []}
    />
  </TableColumn>
  <TableColumn>
    <DeleteRowButton
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </TableColumn>
</TableRow>
`;

exports[`MetadataTable should correctly render different types of metadata 3`] = `
<TableRow
  data-test="metadata-table-row"
>
  <TableColumn>
    <KeySelect
      defaultValue="iat"
      name="key"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      usedKeys={Array []}
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      id="metadata-alias-column"
      name="alias"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="region_alias"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="type"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        Array [
          Object {
            "label": "Text",
            "value": "Text",
          },
          Object {
            "label": "Text (Optional)",
            "value": "Text_Optional",
          },
          Object {
            "label": "Date",
            "value": "Date",
          },
          Object {
            "label": "Language",
            "value": "Language",
          },
          Object {
            "label": "Region",
            "value": "Region",
          },
        ]
      }
      value="Region"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="regionValue"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        Array [
          Object {
            "label": "GB_ENG",
            "value": "GB_ENG",
          },
          Object {
            "label": "GB_GBN",
            "value": "GB_GBN",
          },
          Object {
            "label": "GB_NIR",
            "value": "GB_NIR",
          },
          Object {
            "label": "GB_SCT",
            "value": "GB_SCT",
          },
          Object {
            "label": "GB_WLS",
            "value": "GB_WLS",
          },
        ]
      }
      value="GB_ENG"
    />
  </TableColumn>
  <TableColumn>
    <FallbackSelect
      name="fallbackKey"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={Array []}
    />
  </TableColumn>
  <TableColumn>
    <DeleteRowButton
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </TableColumn>
</TableRow>
`;

exports[`MetadataTable should correctly render different types of metadata 4`] = `
<TableRow
  data-test="metadata-table-row"
>
  <TableColumn>
    <KeySelect
      defaultValue="iat"
      name="key"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      usedKeys={Array []}
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      id="metadata-alias-column"
      name="alias"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="language_alias"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="type"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        Array [
          Object {
            "label": "Text",
            "value": "Text",
          },
          Object {
            "label": "Text (Optional)",
            "value": "Text_Optional",
          },
          Object {
            "label": "Date",
            "value": "Date",
          },
          Object {
            "label": "Language",
            "value": "Language",
          },
          Object {
            "label": "Region",
            "value": "Region",
          },
        ]
      }
      value="Language"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="languageValue"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        Array [
          Object {
            "label": "en",
            "value": "en",
          },
          Object {
            "label": "cy",
            "value": "cy",
          },
        ]
      }
      value="cy"
    />
  </TableColumn>
  <TableColumn>
    <FallbackSelect
      name="fallbackKey"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={Array []}
    />
  </TableColumn>
  <TableColumn>
    <DeleteRowButton
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </TableColumn>
</TableRow>
`;

exports[`MetadataTable should render 1`] = `
<TableRow
  data-test="metadata-table-row"
>
  <TableColumn>
    <KeySelect
      defaultValue="tx_id"
      name="key"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      usedKeys={Array []}
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      id="metadata-alias-column"
      name="alias"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="test_alias"
    />
  </TableColumn>
  <TableColumn>
    <Select
      name="type"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={
        Array [
          Object {
            "label": "Text",
            "value": "Text",
          },
          Object {
            "label": "Text (Optional)",
            "value": "Text_Optional",
          },
          Object {
            "label": "Date",
            "value": "Date",
          },
          Object {
            "label": "Language",
            "value": "Language",
          },
          Object {
            "label": "Region",
            "value": "Region",
          },
        ]
      }
      value="Text"
    />
  </TableColumn>
  <TableColumn>
    <TableInput
      id="metadata-value-column"
      name="textValue"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      value="text"
    />
  </TableColumn>
  <TableColumn>
    <FallbackSelect
      name="fallbackKey"
      onChange={[MockFunction]}
      onUpdate={[MockFunction]}
      options={Array []}
    />
  </TableColumn>
  <TableColumn>
    <DeleteRowButton
      data-test="metadata-delete-row"
      onClick={[Function]}
      size="medium"
    />
  </TableColumn>
</TableRow>
`;
